Start on four corners example

--- a/Makefile.in
+++ b/Makefile.in
@@ -14,7 +14,7 @@
 
 @SET_MAKE@
 
-# File: Makefile.am, author: John Sauter, date: August 17, 2025.
+# File: Makefile.am, author: John Sauter, date: August 23, 2025.
 #
 # Build traffic_control_signals.pdf and animations.
 
@@ -1167,8 +1167,8 @@ RPMs:
 traffic_control_signals.pdf : traffic_control_signals.tex \
 traffic_control_signals.bbl LICENSE legalcode.txt \
 state_diagram.eps red_state_table.tex \
-green_state_table.tex yellow_state_table.tex lamp_map_names_02.tex \
-sensor_map_02.tex idle_table.tex left_turn_table.tex \
+green_state_table.tex yellow_state_table.tex lamp_map_names_03.tex \
+sensor_map_03.tex idle_table.tex left_turn_table.tex \
 left_turn_delayed_table.tex \
 pedestrian_table.tex pedestrian_and_left_turn_table.tex multiple_table.tex \
 MUTCD_Ped_Signal_-_Hand_with_timer.pdf \
@@ -1214,7 +1214,7 @@ ${srcdir}/traffic_control_signals.tex
 traffic_control_signals.bbl : traffic_control_signals.tex references.bib \
 LICENSE legalcode.txt state_diagram.eps \
 red_state_table.tex green_state_table.tex yellow_state_table.tex \
-lamp_map_names_02.tex sensor_map_02.tex idle_table.tex left_turn_table.tex \
+lamp_map_names_03.tex sensor_map_03.tex idle_table.tex left_turn_table.tex \
 left_turn_delayed_table.tex \
 pedestrian_table.tex pedestrian_and_left_turn_table.tex multiple_table.tex \
 MUTCD_Ped_Signal_-_Hand_with_timer.pdf \
@@ -1289,6 +1289,13 @@ finite_state_machine.json
 --input=${builddir}/finite_state_machine.json \
 --output=${builddir}/one_way_bridge.json
 
+# Create a JSON file which describes the four corners example.
+four_corners.json : define_four_corners.py \
+finite_state_machine.json
+	python3 ${srcdir}/define_four_corners.py \
+--input=${builddir}/finite_state_machine.json \
+--output=${builddir}/four_corners.json
+
 # Create a JSON file which describes the complex intersection.
 complex_intersection.json : define_complex_intersection.py \
 finite_state_machine.json
@@ -1301,10 +1308,15 @@ lamp_map_names_01.tex : display_intersection.py one_way_bridge.json
 --input=${builddir}/one_way_bridge.json \
 --lamp-map=${builddir}/lamp_map_names_01.tex 
 
-lamp_map_names_02.tex : display_intersection.py complex_intersection.json
+lamp_map_names_02.tex : display_intersection.py four_corners.json
+	python3 ${srcdir}/display_intersection.py \
+--input=${builddir}/four_corners.json \
+--lamp-map=${builddir}/lamp_map_names_01.tex 
+
+lamp_map_names_03.tex : display_intersection.py complex_intersection.json
 	python3 ${srcdir}/display_intersection.py \
 --input=${builddir}/complex_intersection.json \
---lamp-map=${builddir}/lamp_map_names_02.tex 
+--lamp-map=${builddir}/lamp_map_names_03.tex 
 
 sensor_map_01.tex : display_intersection.py one_way_bridge.json
 	python3 ${srcdir}/display_intersection.py \
@@ -1313,11 +1325,16 @@ sensor_map_01.tex : display_intersection.py one_way_bridge.json
 
 sensor_map_02.tex : display_intersection.py complex_intersection.json
 	python3 ${srcdir}/display_intersection.py \
---input=${builddir}/complex_intersection.json  \
+--input=${builddir}/four_corners.json  \
 --sensor-map=${builddir}/sensor_map_02.tex 
 
+sensor_map_03.tex : display_intersection.py complex_intersection.json
+	python3 ${srcdir}/display_intersection.py \
+--input=${builddir}/complex_intersection.json  \
+--sensor-map=${builddir}/sensor_map_03.tex 
+
 # Generate the table files which detail the operation of the
-# finite state machines
+# finite state machines.
 idle_table.tex : simulate_traffic.py complex_intersection.json
 	python3 ${srcdir}/simulate_traffic.py \
 --intersection ${builddir}/complex_intersection.json \
@@ -1400,13 +1417,23 @@ left_turn_script.txt
 
 # Animations illustrate a scenario.  This csv file describes where each
 # object is located with the passage of time.
+# When building an animation, indicate which example intersection the
+# script applies to by following the name of the script with "animation_01"
+# for the one-way bridge example, "animation_02" for the four corners example,
+# and "animation_03" for the complex intersection example.
 %_animation_01.csv : %_script.txt simulate_traffic.py one_way_bridge.json
 	python3 ${srcdir}/simulate_traffic.py \
 --intersection ${builddir}/one_way_bridge.json \
 --script "${srcdir}/$<" --duration 1200 --events-file "$@" \
 --last-event-time "${builddir}/last_event_time_$(*F)_animation.txt"
 
-%_animation_02.csv : %_script.txt simulate_traffic.py complex_intersection.json
+%_animation_02.csv : %_script.txt simulate_traffic.py four_corners.json
+	python3 ${srcdir}/simulate_traffic.py \
+--intersection ${builddir}/four_corners.json \
+--script "${srcdir}/$<" --duration 1200 --events-file "$@" \
+--last-event-time "${builddir}/last_event_time_$(*F)_animation.txt"
+
+%_animation_03.csv : %_script.txt simulate_traffic.py complex_intersection.json
 	python3 ${srcdir}/simulate_traffic.py \
 --intersection ${builddir}/complex_intersection.json \
 --script "${srcdir}/$<" --duration 1200 --events-file "$@" \
@@ -1418,13 +1445,19 @@ background_01.png : draw_background.py one_way_bridge.json
 --intersection ${builddir}/one_way_bridge.json \
 --background ${builddir}/background_01.png
 
-background_02.png : draw_background.py complex_intersection.json
+background_02.png : draw_background.py four_corners.json
+	python3 ${srcdir}/draw_background.py \
+--intersection ${builddir}/four_corners.json \
+--background ${builddir}/background_02.png
+
+background_03.png : draw_background.py complex_intersection.json
 	python3 ${srcdir}/draw_background.py \
 --intersection ${builddir}/complex_intersection.json \
---background ${builddir}/background_02.png
+--background ${builddir}/background_03.png
 
 # Render the animation as individual images.  We use the PDF file
 # as a marker to say that the frames have been generated.
+# One-way bridge example.
 %_animation_01.pdf : %_animation_01.csv \
 background_01.png \
 process_events.py build_animation.sh build_animation_serial.sh \
@@ -1474,6 +1507,7 @@ man_walking_right.png
 %_animation_01.mkv : %_animation_01.pdf
 	bash build_video.sh "$@" "${builddir}/animation_$(*F)_temp"
 
+# Four corners example.
 %_animation_02.pdf : %_animation_02.csv \
 background_02.png \
 process_events.py build_animation.sh build_animation_serial.sh \
@@ -1517,10 +1551,60 @@ car-38800411-up.png truck-51893967-up.png truck-51893967-right.png \
 man_walking_right.png
 	bash build_animation.sh "$<" \
 "last_event_time_$(*F)_animation.txt" "animation_$(*F)_temp" \
-"${builddir}/complex_intersection.json" "${builddir}/background_02.png"
+"${builddir}/four_corners.json" "${builddir}/background_02.png"
 	touch "$@"
 
 %_animation_02.mkv : %_animation_02.pdf
+	bash build_video.sh "$@" "${builddir}/animation_$(*F)_temp"
+
+# Complex intersection example
+%_animation_03.pdf : %_animation_03.csv \
+background_03.png \
+process_events.py build_animation.sh build_animation_serial.sh \
+render_animation.sh \
+signal_ccc_Green.png signal_ccc_Red.png \
+signal_ccc_Yellow.png signal_ccu_Green.png signal_ccu_Red.png \
+signal_ccu_Yellow.png signal_Dark_3.png signal_Dark_4.png \
+signal_cccl_Green.png signal_cccl_Red.png signal_cccl_Yellow.png \
+signal_llll_Flashing_Yellow.png signal_llll_Green.png signal_llll_Red.png \
+signal_llll_Yellow.png signal_rrr_Green.png signal_rrr_Red.png \
+signal_rrr_Yellow.png MUTCD_Ped_Signal_-_Hand_with_timer.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-00.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-01.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-02.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-03.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-04.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-05.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-06.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-07.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-08.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-09.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-10.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-11.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-12.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-13.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-14.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-15.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-16.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-17.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-18.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-19.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-20.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-21.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-22.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-23.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-24.png \
+MUTCD_Ped_Signal_-_Hand_with_timer-25.png \
+MUTCD_Ped_Signal_-_Steady_hand.png MUTCD_Ped_Signal_-_Walk.png \
+car-38800411-right.png \
+car-38800411-up.png truck-51893967-up.png truck-51893967-right.png \
+man_walking_right.png
+	bash build_animation.sh "$<" \
+"last_event_time_$(*F)_animation.txt" "animation_$(*F)_temp" \
+"${builddir}/complex_intersection.json" "${builddir}/background_03.png"
+	touch "$@"
+
+%_animation_03.mkv : %_animation_03.pdf
 	bash build_video.sh "$@" "${builddir}/animation_$(*F)_temp"
 
 clean-local: clean-local-check
