--- a/Makefile.in
+++ b/Makefile.in
@@ -528,7 +528,8 @@ EXTRA_DIST = signal_ccc.svg signal_ccu.svg signal_rrr.svg \
 	define_traffic_control_signals.py \
 	display_traffic_control_signals.py \
 	define_complex_intersection.py define_one_way_bridge.py \
-	display_intersection.py simulate_traffic.py draw_background.py \
+	define_four_corners.py display_intersection.py \
+	simulate_traffic.py draw_background.py \
 	traffic_control_signals.tex state_diagram.txt \
 	signal_ccc_Green.svg signal_ccc_Red.svg signal_ccc_Yellow.svg \
 	signal_ccu_Green.svg signal_ccu_Red.svg signal_ccu_Yellow.svg \
@@ -1360,7 +1361,7 @@ idle_03_table.tex : simulate_traffic.py complex_intersection.json
 --table-level 4 --table-file ${builddir}/idle_03_table.tex --duration 200  \
 --table-caption "Power On to Idle State, example 03"
 
-eft_turn_table.tex : simulate_traffic.py complex_intersection.json \
+left_turn_table.tex : simulate_traffic.py complex_intersection.json \
 left_turn_script.txt
 	python3 ${srcdir}/simulate_traffic.py \
 --intersection ${builddir}/complex_intersection.json \
